fixed select box alignment

--- a/style.css
+++ b/style.css
@@ -162,7 +162,6 @@ footer p {
     flex-wrap: wrap;
     justify-content: center;
     padding: 10px 10px 10px 10px;
-    align-items: baseline;
   }
 
   form div {
